--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <section class="sticky">
         <blockquote>"Wir sind hässlich und stolz!"<span></span></blockquote>
-        <img id="anna" src="images/annas.png"  alt="">
+        <img id="anna" src="images/annas.jpg"  alt="">
         <img id="andrej" src="images/andrej.jpg" alt="">
         <div id="box"></div>
     </section>
