--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
     <title>Document</title>
 </head>
 <body>
-    
     <section>
-        <h1>Runterscrollen für sensiblen Inhalt</h1>
+        <div class="wrapper">
+            <header>
+                <a href="#" class="logo">CivanÖner</a>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            
+            <div class="hero-content">
+                <h1>Sensibler Inhalt</h1>
+                <p class="subtitle">Runterscrollen auf eigene Gefahr</p>
+            </div>
+        </div>
     </section>
     <section class="sticky">
         <blockquote>"Wir sind hässlich und stolz!"<span></span></blockquote>
