--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.php">About</a></li>
-                        <li><a href="contact.php">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -43,11 +43,12 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Horizontal Ad -->
         <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-5281796850494277"
-        data-ad-slot="8044049627"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
+            style="display:block"
+            data-ad-client="ca-pub-5281796850494277"
+            data-ad-slot="8044049627"
+            data-ad-format="auto"
+            data-full-width-responsive="true">
+        </ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
