--- a/beginnerProjects/bin2dec.html
+++ b/beginnerProjects/bin2dec.html
@@ -10,6 +10,7 @@
     <title>Bin2Dec</title>
 </head>
 <body>
+    <h1>Binary to Decimal Converter</h1>
     <div id="bin2dec">
     <input id="input" type="number">
     <button type="button" onclick="calculateFromBinToDec()">Calculate</button>
