--- a/beginnerProjects/borderRadiusPreviewer.html
+++ b/beginnerProjects/borderRadiusPreviewer.html
@@ -10,6 +10,7 @@
     <title>Border Radius Previewer</title>
 </head>
 <body>
+    <h1>Border-Radius Previewer</h1>
     <div id="borderRadiusPreviewer">
         <div id="box"></div>
         <li>
