--- a/beginnerProjects/bin2dec.html
+++ b/beginnerProjects/bin2dec.html
@@ -12,10 +12,10 @@
 <body>
     <h1>Binary to Decimal Converter</h1>
     <div id="bin2dec">
-    <input id="input" type="number">
+    <p>Binary: <input id="input" type="number"></p>
     <button type="button" onclick="calculateFromBinToDec()">Calculate</button>
     <br>
-    <p><input type="text" id="result"> Result</p>
+    <p><input type="text" id="result"> Decimal</p>
 </div>
 </body>
 </html>
