--- a/beginnerProjects/bin2dec.html
+++ b/beginnerProjects/bin2dec.html
@@ -15,7 +15,7 @@
     <p>Binary: <input id="input" type="number"></p>
     <button type="button" onclick="calculateFromBinToDec()">Calculate</button>
     <br>
-    <p><input type="text" id="result"> Decimal</p>
+    <p>Decimal: <input type="text" id="result"></p>
 </div>
 </body>
 </html>
