--- a/coding.html
+++ b/coding.html
@@ -9,6 +9,7 @@
 <body>
         <h1>My Beginner Programming List</h1>
         <li><a href="beginnerProjects/bin2dec.html">Bin2Dec - Binary to Decimal Calculator</a></li> 
-        <li><a href="beginnerProjects/borderRadiusPreviewer.html">borderRadiusPreviewer</a></li> 
+        <li><a href="beginnerProjects/borderRadiusPreviewer.html">borderRadiusPreviewer</a></li>
+        <li><a href="beginnerProjects/calculator.html">Calculator</a></li>  
 </body>
 </html>
