--- a/beginnerProjects/calculator.html
+++ b/beginnerProjects/calculator.html
@@ -15,7 +15,7 @@
             <p id="cache"> </p>
             <p id="content"></p>
         </div>
-        <button class="grid-item" id="clear">C</button>
+        <button class="grid-item" id="clear" onclick="clearCache()">C</button>
         <button class="grid-item" id="allClear">AC</button>
         <button class="grid-item"> </button>
         <button class="grid-item"> </button>
